deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-demo
  labels:
    app: flask-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-demo
  template:
    metadata:
      labels:
        app: flask-demo
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: flask-demo
          image: ghcr.io/sandeepanumula92/flask-demo:f0b2537
          ports:
            - containerPort: 5000
