service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-demo
  labels:
    app: flask-demo
spec:
  selector:
    app: flask-demo
  ports:
  - name: http
    port: 5000
    targetPort: 5000
